--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,20 @@
     <title>Recipe Home</title>
 </head>
 <body>
-    <h1>My Recipes!</h1>
+    <h2 th:text="'My Recipes!'">My Recipes!</h2>
+    <table id="recipes" class="table table-striped">
+        <thead>
+        <tr>
+            <th style="width: 150px;">Id</th>
+            <th style="width: 150px;">Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="recipe : ${recipes}">
+            <td th:text="${recipe.id}">1</td>
+            <td th:text="${recipe.description}">Joe</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
